<resources>
    <string name="app_name">Introverted</string>
    <string name="conoce_personas_que_te_sumen">Conoce personas que te sumen</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="vive_una_experiencia_distinta_a_las_aplicaciones_para_conocer_personas_convencionales">Vive una experiencia distinta a las aplicaciones para conocer personas convencionales</string>
    <string name="conectate_y_comparte_inciando_sesi_n_o_creando_un_perfil">Conectate y comparte inciando sesión o creando un perfil</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="registrate">Registrate</string>
    <string name="o">O</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="reg_strate">Regístrate</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña?</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="por_favor_ingresa_tu_informaci_n_personal">Por favor ingresa tu información personal</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>


    <string-array name="generos">
        <item>Selecciona un genero</item>
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="generos_mf">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="music_genres">
        <item>Pop</item>
        <item>Jazz</item>
        <item>R&amp;B</item>
        <item>Indie</item>
        <item>Rock Alternativo</item>
        <item>Country</item>
        <item>Reggae</item>
        <item>Rock clásico</item>
        <item>Rock</item>
        <item>Soul</item>
        <item>Heavy Metal</item>
    </string-array>
    <string-array name="music_activities">
        <item>Salir a conciertos</item>
        <item>Ir al karaoke</item>
        <item>Quedarte en casa escuchando CDs viejos</item>
        <item>Crear música tocando instrumentos</item>
        <item>Salidas en el carro, escuchando la radio</item>
        <item>Unirte a una banda o grupo musical</item>
    </string-array>
    <string-array name="aficiones">
        <item>Fotografía</item>
        <item>Escritura</item>
        <item>Pintura</item>
        <item>Cocina</item>
        <item>Poesía</item>
        <item>Caminatas</item>
        <item>Jardinería</item>
        <item>Videojuegos</item>
        <item>Dibujo</item>
        <item>Blogs</item>
        <item>Viajar</item>
        <item>Deportes</item>
    </string-array>

    <string-array name="movie_genres">
        <item>Horror</item>
        <item>Fantasía</item>
        <item>Ciencia Ficción</item>
        <item>Drama</item>
        <item>Misterio</item>
        <item>Documentales</item>
        <item>Romance</item>
        <item>Comedia</item>
        <item>Cartoon</item>
        <item>Crimen</item>
        <item>Acción</item>
        <item>Aventura</item>
    </string-array>

    <string-array name="food_type">
        <item>Comida china</item>
        <item>Comida italiana</item>
        <item>Comida japonesa</item>
        <item>Comida guatemalteca</item>
        <item>Comida mexicana</item>
        <item>Comida española</item>
        <item>Comida peruana</item>
        <item>Comida árabe</item>
        <item>Comida india</item>
        <item>Comida argentina</item>
        <item>Comida uruguaya</item>
        <item>Comida vietnamita</item>
        <item>Comida francesa</item>
        <item>Comida tailandesa</item>
        <item>Comida rápida</item>
    </string-array>

    <string-array name="art_type">
        <item>Abstracto</item>
        <item>Moderno</item>
        <item>Clásico</item>
        <item>Conceptual</item>
        <item>Impresionista</item>
        <item>Neo-impresionista</item>
        <item>Arte pop</item>
        <item>Cubista</item>
        <item>Surrealista</item>
        <item>Contemporáneo</item>
        <item>Fantasía</item>
        <item>Graffiti</item>
        <item>Barroco</item>
        <item>Vanguardista</item>
        <item>Futurista</item>
        <item>Suprematista</item>
    </string-array>

    <string-array name="anime">
        <item>Kodomo</item>
        <item>Shonen</item>
        <item>Shojo</item>
        <item>Seinen</item>
        <item>Josei</item>
        <item>Isekai</item>
        <item>Maho shojo</item>
        <item>Sentai</item>
        <item>Spokon</item>
        <item>Mecha</item>
        <item>Suspenso</item>
        <item>Cyberpunk</item>
        <item>Comedia</item>
        <item>Harem</item>
        <item>Gekiga</item>
    </string-array>

    <string-array name="videogames_genres">
        <item>Shooter</item>
        <item>Acción</item>
        <item>Guerra</item>
        <item>RPG</item>
        <item>Deporte</item>
        <item>Aventura</item>
        <item>Puzzle</item>
        <item>Estrategia</item>
        <item>Carreras</item>
        <item>Simulación</item>
        <item>Musical</item>
        <item>Party</item>
        <item>Lucha</item>
        <item>Arcade</item>
        <item>Plataformas</item>
    </string-array>

    <string-array name="biblio">
        <item>Novela romántica</item>
        <item>Novela de terror</item>
        <item>Ciencia ficción</item>
        <item>Novela negra</item>
        <item>Novela Histórica</item>
        <item>Biografías</item>
        <item>Poesía</item>
        <item>Policíaca</item>
        <item>Humor</item>
        <item>Mitología</item>
        <item>Teatro</item>
        <item>Cuento</item>
        <item>Novela gótica</item>
        <item>Novela de aventuras</item>
        <item>Novela fantástica</item>
    </string-array>

    <integer-array name="valuesrange">
        <item>0</item>
        <item>200</item>
    </integer-array>

    <array name="iv_aficiones">
        <item>@drawable/ic_camara</item>
        <item>@drawable/ic_literatura</item>
        <item>@drawable/ic_pintar</item>
        <item>@drawable/ic_cocinando</item>
        <item>@drawable/ic_poesia</item>
        <item>@drawable/ic_caminar</item>
        <item>@drawable/ic_jardinero</item>
        <item>@drawable/ic_ps4</item>
        <item>@drawable/ic_dibujo</item>
        <item>@drawable/ic_correo_no_deseado</item>
        <item>@drawable/ic_tarjeta_de_embarque</item>
    </array>

    <string name="title_activity_main2">min</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="por_favor_ingresa_que_intereses_o_aficiones_tienes">Por favor ingresa que intereses o aficiones tienes</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="usuario_o_correo_electr_nico">Usuario o correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="IP">192.168.0.5</string>
    <string name="introverted">SDK Auth</string>
    <string name="warning_need_token">You need to request an access token first</string>
    <string name="code">Code: %1$s</string>
    <string name="token">Access Token: %1$s</string>
    <string name="tema">tema</string>
</resources>