<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".Login"
        android:background="@drawable/lineargradient"
        android:fitsSystemWindows="true"
        >

        <Button
            android:id="@+id/login_button"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:shadowColor="#FFFFFF"
            android:text="@string/iniciar_sesi_n"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/not_remember"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pass"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textoLogin"
            android:layout_width="346dp"
            android:layout_height="75dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/conectate_y_comparte_inciando_sesi_n_o_creando_un_perfil"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/emailoruser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoLogin"
            app:layout_constraintVertical_bias="0.25"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/logoLogin"
            android:layout_width="235dp"
            android:layout_height="188dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintBottom_toTopOf="@+id/textoLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.009"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/emailoruser"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:background="@drawable/editt_bg"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:hint="@string/usuario_o_correo_electr_nico"
            android:inputType="textEmailAddress|textAutoComplete|text"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B3FFFFFF"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textoLogin"
             />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:background="@drawable/editt_bg"
            android:gravity="center"
            android:textColorHint="#B3FFFFFF"
            android:layout_marginTop="20dp"
            app:passwordToggleTint="@drawable/select_toggle_color"
            app:layout_constraintBottom_toTopOf="@+id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailoruser"
            app:layout_constraintVertical_bias="0.338"
            app:layout_editor_absoluteX="92dp"
            app:passwordToggleEnabled="true"
            android:paddingBottom="8dp"
            android:hint="@string/contrase_a"
            android:textColor="@color/colorWhite"
            >

            <EditText
                android:id="@+id/pswrd"
                android:layout_width="350dp"
                android:layout_height="56dp"
                android:fontFamily="@font/rubik_medium"
                android:inputType="textPassword|textNoSuggestions"
                android:padding="16dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#B3FFFFFF"
                app:passwordToggleEnabled="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/not_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="110dp"
            android:layout_marginTop="30dp"
            android:background="#00FFFFFF"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/has_olvidado_la_contrase_a"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textColorHint="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button"
            app:layout_constraintVertical_bias="0.831"
            />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/rubik_medium"
            android:gravity="center"
            android:text="@string/o"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.898" />

        <View
            android:id="@+id/linea"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:layout_marginBottom="30dp"
            android:background="#000000"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.899" />

        <View
            android:id="@+id/linea1"
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:layout_marginBottom="20dp"
            android:background="#000000"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.886" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:background="#00FFFFFF"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/reg_strate"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/not_remember"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>