<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sb_food"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/lineargradient"
        tools:context=".Register"
        android:paddingBottom="20dp">


        <Button
            android:id="@+id/siguiente"
            android:layout_width="175dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_rectangle"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:shadowColor="#FFFFFF"
            android:text="SIGUIENTE"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_gender"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/pwrd_reg"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:layout_marginBottom="60dp"
            android:background="@drawable/editt_bg"
            android:drawableEnd="@drawable/ic_eye"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            app:layout_constraintVertical_bias="0.064" />

        <EditText
            android:id="@+id/pwrd_confirm"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:background="@drawable/editt_bg"
            android:drawableEnd="@drawable/ic_eye"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:hint="@string/confirmar_contrase_a"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwrd_reg"
            app:layout_constraintVertical_bias="0.06" />

        <Button
            android:id="@+id/bday_date"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:background="@drawable/editt_bg"
            android:drawableEnd="@drawable/ic_calendar"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:hint="@string/fecha_de_nacimiento"
            android:padding="16dp"
            android:textAlignment="viewStart"
            android:textColor="#B3FFFFFF"
            android:textColorHint="#B3FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pwrd_confirm"
            app:layout_constraintVertical_bias="0.099" />

        <EditText
            android:id="@+id/email"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:layout_marginBottom="250dp"
            android:maxLength="25"
            android:background="@drawable/editt_bg"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress|textFilter|textNoSuggestions"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.413" />

        <EditText
            android:id="@+id/username"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/editt_bg"
            android:fontFamily="@font/rubik_medium"
            android:foregroundGravity="center"
            android:maxLength="25"
            android:hint="Nombre de usuario"
            android:inputType="text"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#B3FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.057" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="600dp"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="500dp"
            android:fontFamily="@font/rubik_bold"
            android:gravity="center"
            android:text="@string/por_favor_ingresa_tu_informaci_n_personal"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_gender"
            android:layout_width="350dp"
            android:layout_height="56dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:background="@color/bg_login"
            android:popupBackground="@drawable/lineargradient"
            android:spinnerMode="dropdown"
            android:textColor="#ffffff"
            android:layout_centerInParent="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bday_date"
            app:layout_constraintBottom_toTopOf="@+id/siguiente"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>